<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.cnr.isti.labsedc.concern.rest</groupId>
	<artifactId>RestBiecoMonitoring</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>RestBiecoMonitoring</name>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.glassfish.jersey</groupId>
				<artifactId>jersey-bom</artifactId>
				<version>3.1.10</version>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<!-- DROOLS -->
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-core</artifactId>
    		<version>8.44.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-templates</artifactId>
    		<version>8.44.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-decisiontables</artifactId>
    		<version>8.44.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.drools</groupId>
			<artifactId>drools-compiler</artifactId>
    		<version>8.44.0.Final</version>
		</dependency>
		<dependency>
			<groupId>org.drools</groupId>
    		<artifactId>drools-mvel</artifactId>
    		<version>8.44.0.Final</version>
		</dependency>
		<!-- END DROOLS -->
		
		<!--- START ESPER-->
		
		<!-- https://mvnrepository.com/artifact/com.espertech/esper -->
		<dependency>
		    <groupId>com.espertech</groupId>
		    <artifactId>esper-common</artifactId>
		    <version>9.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.espertech/esper-runtime -->
		<dependency>
		    <groupId>com.espertech</groupId>
		    <artifactId>esper-runtime</artifactId>
		    <version>9.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.espertech/esper-compiler -->
		<dependency>
		    <groupId>com.espertech</groupId>
		    <artifactId>esper-compiler</artifactId>
		    <version>9.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.espertech/esper-common-xmlxsd -->
		<dependency>
		    <groupId>com.espertech</groupId>
		    <artifactId>esper-common-xmlxsd</artifactId>
		    <version>9.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.espertech/esper-common-avro -->
		<dependency>
		    <groupId>com.espertech</groupId>
		    <artifactId>esper-common-avro</artifactId>
		    <version>9.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.espertech/esperio-csv -->
		<dependency>
		    <groupId>com.espertech</groupId>
		    <artifactId>esperio-csv</artifactId>
		    <version>9.0.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.espertech/esperio-http -->
		<dependency>
		    <groupId>com.espertech</groupId>
		    <artifactId>esperio-http</artifactId>
		    <version>9.0.0</version>
		</dependency>	
		<!--- END ESPER-->
		
		<!-- BROKER/JMS -->
		<dependency>
    		<groupId>jakarta.jms</groupId>
    		<artifactId>jakarta.jms-api</artifactId>
    		<version>3.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-broker</artifactId>
			<version>6.1.5</version>
		</dependency>
		<!-- END BROKER/JMS -->
<dependency>
    <groupId>com.mysql</groupId>
    <artifactId>mysql-connector-j</artifactId>
    <version>9.2.0</version>
</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.24.3</version>
		</dependency>
		<!-- START MQTT -->
		<dependency>
			<groupId>org.eclipse.paho</groupId>
			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
			<version>1.2.5</version>
		</dependency>
		<!-- END MQTT -->
		<dependency>
			<groupId>com.fazecast</groupId>
			<artifactId>jSerialComm</artifactId>
			<version>[2.0.0,3.0.0)</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
    		<version>20250107</version>
		</dependency>
		<dependency>
		    <groupId>org.glassfish.jersey.containers</groupId>
		    <artifactId>jersey-container-grizzly2-http</artifactId>
		    <version>3.1.10</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>3.1.10</version>
		</dependency>
		<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-api</artifactId>
    <version>2.0.7</version>
</dependency>
<dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-simple</artifactId>
    <version>2.0.7</version>
</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<inherited>true</inherited>
				<configuration>
					<source>23</source>
					<target>23</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
					<phase>install</phase>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>it.cnr.isti.labsedc.concern.rest.Main</mainClass>
				</configuration>
			</plugin>

    <plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <configuration>
        <archive>
          <manifest>
            <mainClass>it.cnr.isti.labsedc.concern.ConcernApp</mainClass>
          </manifest>
        </archive>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
      </configuration>
      <executions>
        <execution>
          <id>make-assembly</id> <!-- this is used for merges -->
          <phase>package</phase> <!-- bind to the packaging phase -->
          <goals>
            <goal>single</goal>
          </goals>
        </execution>
      </executions>
    </plugin>
		</plugins>
	</build>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
</project>

